[package]
name = "solana_client"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.2.19"
solana-client = "2.2.19"
solana-transaction-status = "2.2.19"
borsh = "1.4.0"
borsh-derive = "1.4.0"
dirs = "6.0.0"
solana-system-interface = "1.0.0"
serde_json = "1.0.141"

[[bin]]
name = "read_vault"
path = "src/read_vault.rs"

[[bin]]
name = "increment_vault"
path = "src/increment_vault.rs"

[[bin]]
name = "create_vault"
path = "src/create_vault.rs"
